# rrshellws

./: Cargo.toml  README.md  app.map
devshell/: Cargo.toml
devshell/src/: lib.rs
dictionaries/: Cargo.toml
dictionaries/src/: lib.rs
dictionaries/src/compiled_dictionary/: interpreter_compiled_table.rs  mod.rs  shell_compiled_table.rs
dictionaries/src/function_dictionary/: interpreter_function_table.rs  interpreter_functions.rs  mod.rs  shell_function_table.rs
logger/src/: lib.rs
mux/: Cargo.toml
mux/src/: lib.rs
st7735/: Cargo.toml
st7735/src/: lib.rs
testEmbassyShell/: .gitignore  Cargo.toml  README.md  memory.x  rust-toolchain.toml
testEmbassyShell/.cargo/: config.toml
testEmbassyShell/docs/: states.puml
testEmbassyShell/src/: main.rs
testEmbassyShell/src/dictionary/: cargo.toml
testEmbassyShell/src/dictionary/compiled_dictionary/: mod.rs
testEmbassyShell/src/dictionary/function_dictionary/: interpreter_functions.rs  mod.rs  shell_function_table.rs  shell_functions.rs
testEmbassyShell/src/logger/: mod.rs
testEmbassyShell/src/mux/: mod.rs
testEmbassyShell/src/st7735/: mod.rs
testEmbassyShell/src/xxdevshell/: mod.rs
testEmbassyShell/src/xxmux/: mod.rs
testEmbassyShell/src/xxuart_handler/: mod.rs
testEmbassyShell/src/xxxxxdictionary/: lib.rs
testEmbassyShell/src/xxxxxdictionary/current_dictionary/: mod.rs
testEmbassyShell/src/xxxxxdictionary/function_dictionary/: interpreter_function_table.rs
uart_handler/: Cargo.toml
uart_handler/src/: lib.rs
