[package]
name = "devshell"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt = "0.3"
embassy-sync = { version = "0.6.0", path = "../../embassy/embassy-sync", features = ["defmt"] }
embassy-executor = { version = "0.6.0", path = "../../embassy/embassy-executor", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
heapless = { version = "0.8", default-features = false }
