[package]
name = "mux"
version = "0.1.0"
edition = "2021"

[dependencies]
crc_crate = { package="crc", version="3.0"}
defmt = "0.3"
embassy-executor = { version = "0.6.0", path = "../../embassy/embassy-executor", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-sync = { version = "0.6.0", path = "../../embassy/embassy-sync", features = ["defmt"] }
embassy-time = { version = "0.3.1", path = "../../embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
heapless = { version = "0.8", default-features = false }

devshell = { path = "../devshell" }
